# bossa-mobile

./: .gitignore  CMakeLists.txt  README.md  make.py  requirements.txt  simple_zip.py
.github/workflows/: android.yml  linux.yml  macos.yml
patches/: bossac_android.cpp  bossac_macos.cpp  bossac_test.cpp
projects/cli/: .gitignore  cli.dart  pubspec.yaml
projects/sample/: pubspec.yaml
projects/sample/android/app/: build.gradle
projects/sample/android/app/src/debug/: AndroidManifest.xml
projects/sample/android/app/src/main/: AndroidManifest.xml
projects/sample/android/app/src/main/kotlin/com/example/sample/: MainActivity.kt
projects/sample/lib/: main.dart
